# cocoTEMU

./: .gitignore  README.md  pyproject.toml  run.sh  setup.sh
src/cocotemu/: __init__.py  axi_master.py  cosim.py  gpio_bridge.py  gpio_client.py  gpio_protocol.py  protocol.py  qemu_bridge.py  qiling_bridge.py
test/: Makefile  requirements.txt  test_cosim.py  test_gpio_bridge.py  test_qemu_bridge.py  test_regs.py
test/firmware/: link.ld  pl.dts  startup.s  test_fw.c
test/rtl/: axi_lite_regs.v
